Update some more license stuff

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <header>
 <h2>Projects</h2>
 </header>
-<p>Here are some of the amazing projects I am working on. For more amazing projects and current project updates, visit my <a href="https://github.com/vgturtle127">GitHub</a>.
+<p>Here are some of the amazing projects I am working on!
 </p>
 <section class="is-gallery">
 <div class="row half">
@@ -123,11 +123,11 @@
 </div>
 <div id="footer">
 <ul class="links">
-<li>Code licensed under the <a href="https://www.gnu.org/licenses/gpl.html#content">GNU GPL v3</a> license</li>
-<li>All other content licensed under the <a href="https://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution Unported 3.0</a> license</li>
+<li>Code licensed under the <a href="https://www.gnu.org/licenses/licenses.html">GNU GPL v2+</a> license</li>
+<li>All other content licensed under the <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a> license</li>
 <br>
 <a href="humans.txt">View my humans.txt file</a>
-<li><a href="http://turtlesprojects.sourceforge.net/">Back to SourceForge</a></li>
+<li><a href="https://vgturtle127.github.io/">Home</a></li>
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick">
 <input type="hidden" name="hosted_button_id" value="KCF3RBB9TSAQA">
