--- a/index.html
+++ b/index.html
@@ -124,9 +124,10 @@
 <div id="footer">
 <ul class="links">
 <li>Code licensed under the <a href="https://www.gnu.org/licenses/licenses.html">GNU GPL v2+</a> license</li>
+<br>
 <li>All other content licensed under the <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a> license</li>
 <br>
-<li><a href="humans.txt">View my humans.txt file</a></li>
+<a href="humans.txt">View my humans.txt file</a>
 <li><a href="https://vgturtle127.github.io/">Home</a></li>
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick">
