--- a/index.html
+++ b/index.html
@@ -123,12 +123,11 @@
 </div>
 <div id="footer">
 <ul class="links">
-<li>Code licensed under the <a href="https://www.gnu.org/licenses/licenses.html">GNU GPL v2+</a> license</li>
+Code licensed under the <a href="https://www.gnu.org/licenses/licenses.html">GNU GPL v2+</a> license
 <br>
-<li>All other content licensed under the <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a> license</li>
+All other content licensed under the <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a> license
 <br>
 <a href="humans.txt">View my humans.txt file</a>
-<li><a href="https://vgturtle127.github.io/">Home</a></li>
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick">
 <input type="hidden" name="hosted_button_id" value="KCF3RBB9TSAQA">
