Testing some modifications

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 </article>
 </div>
 <div id="footer">
-<ul class="links">
+<!-- <ul class="links"> -->
 Code licensed under the <a href="https://www.gnu.org/licenses/licenses.html">GNU GPL v2+</a> license
 <br>
 All other content licensed under the <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a> license
@@ -134,7 +134,7 @@ All other content licensed under the <a href="https://creativecommons.org/licens
 <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
 <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 </form>
-</ul>
+<!-- </ul> -->
 </div>
 </div>
 </body>
