--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ Code licensed under the <a href="https://www.gnu.org/licenses/licenses.html">GNU
 <br>
 All other content licensed under the <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a> license
 <br>
-<a href="humans.txt">View my humans.txt file</a>
+View my <a href="humans.txt">humans.txt</a> file
 <br>
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick">
