Testing some images

--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
 <div class="4u">
 <a href="http://us.playstation.com/publictrophy/"><img src="http://fp.profiles.us.playstation.com/playstation/psn/pid/vgturtle127.png" width="230" height="155" border="0" /></a><br/>
 </div>
-<div class="4u">
+<!-- <div class="4u">
 <a href="#"><img src="#" height="100px" width="100px" alt=""></a>
 </div>
 <div class="4u">
 <a href="#"><img src="#" height="100px" width="100px" alt=""></a>
-</div>
+</div> -->
 </div>
 </section>
 </header>
