Remove redundant stuff and update a few things

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Turtle's Website</title>
 <meta charset="UTF-8"/>
-<meta name="description" content="Turtle's Website! Enjoy your visit, be sure to check the contact page for all the social networks!"/>
+<meta name="description" content="Turtle's Website! Enjoy your visit, be sure to check the contact page to keep in touch!"/>
 <meta name="keywords" content="open source, open-source, free, download, games, applicatons, programs, application, program, emulator, emulaotrs, emu, retro, gaming, reviews, unboxing, unboxings, HD, hd, walkthrough, tutorial, review, walkthroughs, tutorials, lps, lp's, lets play, let's play, longplay, longplays"/>
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400"/>
 <script src="js/jquery.js"></script>
@@ -102,20 +102,11 @@
 <div class="4u">
 <a href="callto:turtle.roe"><img src="img/sk.jpg" height="100px" width="100px" alt="Call turtle.roe"></a>
 </div>
-<div class="4u">
-<a href="https://www.github.com/vgturtle127"><img src="img/gh.jpg" height="100px" width="100px" alt="GitHub"></a>
-</div>
 </div>
 <div class="row half">
 <div class="4u">
 <a href="http://us.playstation.com/publictrophy/"><img src="http://fp.profiles.us.playstation.com/playstation/psn/pid/vgturtle127.png" width="230" height="155" border="0" /></a><br/>
 </div>
-<!-- <div class="4u">
-<a href="#"><img src="#" height="100px" width="100px" alt=""></a>
-</div>
-<div class="4u">
-<a href="#"><img src="#" height="100px" width="100px" alt=""></a>
-</div> -->
 </div>
 </section>
 </header>
