Upgrade Pinterest to TLS 1.2

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 </div>
 <div class="row half">
 <div class="4u">
-<a href="http://www.pinterest.com/vgturtle127"><img src="img/pi.jpg" height="100px" width="100px" alt="Pinterest"></a>
+<a href="https://www.pinterest.com/vgturtle127"><img src="img/pi.jpg" height="100px" width="100px" alt="Pinterest"></a>
 </div>
 <div class="4u">
 <a href="http://vgturtle127.tumblr.com/"><img src="img/tu.jpg" height="100px" width="100px" alt="Tumblr"></a>
