Update more licensing stuff and fix some links

--- a/index.html
+++ b/index.html
@@ -113,11 +113,13 @@
 </article>
 </div>
 <div id="footer">
-Code licensed under the <a href="https://www.gnu.org/licenses/licenses.html">GNU GPL v2+</a> license
+Code licensed under the <a href="http://opensource.org/licenses/MIT">MIT</a> license
 <br>
 All other content licensed under the <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a> license
 <br>
 View my <a href="humans.txt">humans.txt</a> file
+<br>
+Back to <a href="https://www.github.com/vgturtle127">GitHub</a>
 <br>
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick">
