--- a/index.html
+++ b/index.html
@@ -1,133 +1,1 @@
-<!DOCTYPE HTML>
-<html>
-<head>
-<title>Turtle's Website</title>
-<meta charset="UTF-8"/>
-<meta name="description" content="Turtle's Website! Enjoy your visit, be sure to check the contact page to keep in touch!"/>
-<meta name="keywords" content=""/>
-<noscript>
-<link rel="stylesheet" href="css/font.css"/>
-<link rel="stylesheet" href="css/skel.css"/>
-<link rel="stylesheet" href="css/style.css"/>
-<link rel="stylesheet" href="css/style-desktop.css"/>
-<link rel="stylesheet" href="css/noscript.css"/>
-</noscript>
-<script src="js/jquery.js"></script>
-<script src="js/config.js"></script>
-<script src="js/skel.js"></script>
-</head>
-<body class="homepage">
-<div id="wrapper">
-<nav id="nav">
-<a href="#me" class="icon icon-home active"><span>Home</span></a>
-<a href="#work" class="icon icon-folder-close"><span>Projects</span></a>
-<a href="#contact" class="icon icon-envelope"><span>Contact</span></a>
-</nav>
-<div id="main">
-<article id="me" class="panel">
-<header>
-<h1>Derek "Turtle" Roe</h1>
-<span class="byline">Developer and super nerd!</span>
-</header>
-<a href="#work" class="jumplink pic">
-<span class="jumplink arrow icon icon-chevron-right"><span>See my projects</span></span>
-<img src="img/2.jpg" height="400" width="400" alt=""/>
-</a>
-</article>
-<article id="work" class="panel">
-<header>
-<h2>Projects</h2>
-</header>
-<p>Here are some of the amazing projects I am working on!
-</p>
-<section class="is-gallery">
-<div class="row half">
-<div class="4u">
-<a href="https://www.github.com/vgturtle127" class="image image-full"><img src="img/1.jpg" height="100px" alt=""></a>
-</div>
-<div class="4u">
-<a href="https://www.github.com/vgturtle127" class="image image-full"><img src="img/1.jpg" height="100px" alt=""></a>
-</div>
-<div class="4u">
-<a href="https://www.github.com/vgturtle127" class="image image-full"><img src="img/1.jpg" height="100px" alt=""></a>
-</div>
-</div>
-<div class="row half">
-<div class="4u">
-<a href="https://www.github.com/vgturtle127" class="image image-full"><img src="img/1.jpg" height="100px" alt=""></a>
-</div>
-<div class="4u">
-<a href="https://www.github.com/vgturtle127" class="image image-full"><img src="img/1.jpg" height="100px" alt=""></a>
-</div>
-<div class="4u">
-<a href="https://www.github.com/vgturtle127" class="image image-full"><img src="img/1.jpg" height="100px" alt=""></a>
-</div>
-</div>
-</section>
-</article>
-<article id="contact" class="panel">
-<header>
-<h2>Contact me</h2>
-<br>
-<center>
-<a href="mailto:vgturtle127@gmail.com"><img src="img/mail.jpg" height="80" width="543" alt=""></a>
-</center>
-<br>
-<br>
-<center>
-<section class="is-gallery">
-<div class="row half">
-<div class="4u">
-<a href="https://www.facebook.com/vgturtle127"><img src="img/fb.jpg" height="100px" width="100px" alt="Facebook"></a>
-</div>
-<div class="4u">
-<a href="https://www.twitter.com/vgturtle127"><img src="img/tw.jpg" height="100px" width="100px" alt="Twitter"></a>
-</div>
-<div class="4u">
-<a href="https://plus.google.com/+DerekRoeTurtle"><img src="img/gp.jpg" height="100px" width="100px" alt="Google+"></a>
-</div>
-</div>
-<div class="row half">
-<div class="4u">
-<a href="https://www.pinterest.com/vgturtle127"><img src="img/pi.jpg" height="100px" width="100px" alt="Pinterest"></a>
-</div>
-<div class="4u">
-<a href="http://vgturtle127.tumblr.com/"><img src="img/tu.jpg" height="100px" width="100px" alt="Tumblr"></a>
-</div>
-<div class="4u">
-<a href="https://www.youtube.com/vgturtle127"><img src="img/yt.jpg" height="100px" width="100px" alt="YouTube"></a>
-</div>
-</div>
-<div class="row half">
-<div class="4u">
-<a href="https://www.twitch.tv/vgturtle127"><img src="img/tt.jpg" height="100px" width="100px" alt="TwitchTV"></a>
-</div>
-<div class="4u">
-<a href="callto:turtle.roe"><img src="img/sk.jpg" height="100px" width="100px" alt="Call turtle.roe"></a>
-</div>
-<div class="row half">
-<div class="4u">
-<a href="https://my.playstation.com/vgturtle127"><img src="img/ps.jpg" height="100" width="100" border="0"/></a>
-</div>
-</div>
-</div>
-</section>
-</center>
-</header>
-</article>
-</div>
-<div id="footer">
-Code licensed under the <a href="https://opensource.org/licenses/MIT">MIT license</a>
-<br>
-All other content licensed under the <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a> license
-<br>
-View my <a href="humans.txt">humans.txt file</a>
-<br>
-Back to <a href="https://www.github.com/vgturtle127">GitHub</a>
-<br>
-<img src="img/donate.gif" href="https://paypal.com/" height="26" width="92" alt="PayPal donation">
-</form>
-</div>
-</div>
-</body>
-</html>
+Check back later
